; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_commit.c_refresh_cache_or_die.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_commit.c_refresh_cache_or_die.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REFRESH_IN_PORCELAIN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"commit\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @refresh_cache_or_die to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @refresh_cache_or_die(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @REFRESH_IN_PORCELAIN, align 4
  %5 = or i32 %3, %4
  %6 = call i64 @refresh_cache(i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = call i32 @die_resolve_conflict(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %1
  ret void
}

declare dso_local i64 @refresh_cache(i32) #1

declare dso_local i32 @die_resolve_conflict(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
